fix alignement

--- a/frontend/src/main/assets/scss/snake.scss
+++ b/frontend/src/main/assets/scss/snake.scss
@@ -1,16 +1,17 @@
 .snake-game {
+
   .board {
     //justify-content: center;
-    color: ghostwhite;
+    color: ghostwhite;;
 
     & > .column {
-      background-color: lightgreen;
+      background-color: darkcyan;
       padding: 0;
       flex-grow: 0;
     }
 
     .cell {
-      border: 1px solid black;
+      border: 0.5px solid lighten(darkcyan, 20);
       width: 20px;
       height: 20px;
       text-align: center;
@@ -22,7 +23,7 @@
     }
 
     .cell-fruit {
-      background-color: darkcyan;
+      background-color: green;
     }
   }
 }
